iFeature Changelog

****************************

Version 4.1.1 (03-28-12)
-Updated missed Google Font library call for SSL support.
-Fixed strange quotes around HTML elements in Google Plus 1 button code.

Version 4.1 (03-21-12)
-Clear fix for posts for non logged-in users.
-Re-added PressTrends with new opt-in only option. 
-Fix for Google +1 button.
-Updated core.pot
-Added Croatian translation files.

Version 4.0.9 (03-14-12)
-Added French translation files.
-CSS fix for search widget.
-zindex fix for fallback menu dropdowns.
-IE8 fix for featured images.
-Minor style and copy tweaks. 
-Removed some old images.

Version 4.0.8 (03-08-12)
-Removed PressTrends function.

Version 4.0.7 (03-07-12)
-Fixed typo in theme options panel.
-Fix for page titles.
-Updated Google Font Library call to be SSL friendly.
-Added browser specific HTML classes for IE CSS.
-Updated some theme copy. 
-CSS tweak for HTML tables to fix calendar widget bug.
-Added next/previous image paginiation for attachments. 

Version 4.0.6 (03-01-12)
-Additional margin fix for HTML tables.
-Updated Foundation CSS.
-Adjusted doctype. 
-Removed legacy icon margin option.
-CSS tweaks.
-Removed HTML comment before doctype call, fixes IE quirks mode issue. 
-Adjusted image upload preview style.

Version 4.0.5 (02-23-12)
-Fix for HTML tables.
-Added align:none option for featured images.
-Added missing translation wrapper to Tags: text. 
-Added a few IE related CSS fixes.
-Responsive design tweaks.
-Modified breadcrumb style, made them a page element and a templates option.
-Removed archive title and search result text from templates.
-Improved post index pagination.

Version 4.0.4 (02-17-12)
-Adjustment to Foundation JS calls to fix further plugin conflicts.
-Fixed broken credit link.
-Fixed IE8 post thumbnail bug.
-IE7 styling fixes.
-Fixed slider captions not displaying.
-Fixed page title option bug. 
-Extended featured image option to Archive and Single templates.
-Theme options copy update.
