@@ -4,7 +4,8 @@ iFeature Changelog
 
 Version 4.1.1 (03-28-12)
 -Updated missed Google Font library call for SSL support.
--Fixed strange quotes around HTML elements in Google Plus 1 button code.
+-Fixed strange quotes around HTML elements in Google +1 button code.
+-Only enqueue Google +1 script if enabled in theme options.
 
 Version 4.1 (03-21-12)
 -Clear fix for posts for non logged-in users.
